# min-devkit

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: cute.env~.maxref.xml  messd~.maxref.xml  pt.glottis~.maxref.xml  uexkull.maxref.xml
help/: messd~.maxhelp
source/projects/cute.env_tilde/: cute.env_tilde.cpp  cute.env_tilde_test.cpp
source/projects/messd_tilde/: CMakeLists.txt  messd_tilde.cpp  messd_tilde_test.cpp
source/projects/pt.glottis_tilde/: CMakeLists.txt  pt.glottis_tilde.cpp  pt.glottis_tilde_test.cpp
source/projects/pt.tract_tilde/: CMakeLists.txt  pt.tract_tilde.cpp  pt.tract_tilde_test.cpp
source/projects/uexkull/: CMakeLists.txt  uexkull.cpp  uexkull_test.cpp
